--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main
-      class="md:max-w-[760px] w-full mx-auto bg-[#000330] pt-10 pb-52 text-white overflow-clip"
+      class="md:max-w-[760px] w-full mx-auto bg-[#000330] pt-10 pb-52 text-white overflow-clip px-2"
     >
       <div class="text-center">
         <h1 class="text-5xl font-bold text-white">
